--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ body {
   background-color: black;  
   font-family: Dosis;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
   color: white;
 }
 h1 {
@@ -60,6 +59,19 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .projects {
+  background: #1D1F20;
+  position: relative;
+  border-radius: 15px;
+  color: white;
+  padding: 10px;
+  margin: 15px;
+  justify-content: center;
+  text-align: center;
+  -webkit-box-shadow: 0px 0px 15px 7px rgba(255,255,255,1);
+  -moz-box-shadow: 0px 0px 15px 7px rgba(255,255,255,1);
+  box-shadow: 0px 0px 15px 7px rgba(255,255,255,1);
+}
+.certificates {
   background: #1D1F20;
   position: relative;
   border-radius: 15px;
@@ -348,6 +360,11 @@ body::-webkit-scrollbar-thumb:hover {
   width: 80px;
   border-radius: 50%;
 }
-canvas {
-  vertical-align: top;
+.certimg {
+  height: 200px;
+  width: 200px;
+  transition: transform 0.3s ease;
+}
+.certimg:hover {
+  transform: scale(2);
 }
